# CPP_CUDA0130

./: CMakeLists.txt  CMakePresets.json  g1.cpp  readme
include/: kernel.h  render.h
src/: kernel.cu  main.cpp  render.cpp
